TestSuite/errors/err0406.pas
const c: System.Type = typeof(integer);
begin
  writeln(c);
end.